More stuff for @25

--- a/themes/default/assets/css/main.css
+++ b/themes/default/assets/css/main.css
@@ -688,16 +688,20 @@ main .password_strength {
 	left: 0;
 }
 
-main .password_strength.great {
+main .password_strength.great, main .password_strength_desc.great {
 	background-color: rgb(39, 179, 15);
 }
 
-main .password_strength.good {
+main .password_strength.good, main .password_strength_desc.good {
 	background-color: rgb(166, 192, 96);
 }
 
-main .password_strength.poor {
+main .password_strength.poor, main .password_strength_desc.poor {
 	background-color: rgb(255, 172, 29);
+}
+
+main .password_strength.bad, main .password_strength_desc.bad {
+	background-color: #c81818;
 }
 
 main .password_strength_separator {
@@ -712,6 +716,7 @@ main .password_strength_desc {
 	float: right;
 	margin-top: 6px;
 	line-height: 16px;
+	font-size: 11px;
 }
 
 /** Footer **/
