--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -243,9 +243,6 @@ main .posts-container .list-view .posts .header .icon-search {
 main .posts-container .list-view .sorter {
 	clear: both;
 	margin-bottom: 25px;
-	font-family: 'Open Sans';
-	font-size: 12px;
-	color: #2D2D29;
 	padding: 5px;
 	height: 30px;
 	max-height: 30px;
@@ -254,8 +251,48 @@ main .posts-container .list-view .sorter {
     box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
 	-moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
 	-webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
+	text-align: left;
 }
 
+main .posts-container .list-view .sorter .content {
+	width: 100%;
+	display: inline-block;
+	margin-top: 5px;
+	margin-left: 10px;
+	font-family: 'Open Sans';
+	font-size: 12px;
+	color: #2D2D29;
+}
+
+main .posts-container .list-view .sorter .content ul li a {
+	color: #999;
+	font-size: 11px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	text-transform: uppercase;
+	padding: 0 10px;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+
+main .posts-container .list-view .sorter .content ul {
+	float: right;
+	margin-right: 20px;
+}
+main .posts-container .list-view .sorter .content ul li a:hover {
+
+ 	text-decoration: none;
+	color: #000;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
 main .posts-container .list-view .preview {
 	overflow:hidden;
 	height: 100px;
