Moving CSS around

--- a/protected/modules/dashboard/assets/css/pure.css
+++ b/protected/modules/dashboard/assets/css/pure.css
@@ -4,6 +4,26 @@ Copyright 2013 Yahoo! Inc. All rights reserved.
 Licensed under the BSD License.
 https://github.com/yui/pure/blob/master/LICENSE.md
 */
+select, 
+textarea, 
+input[type="text"], 
+input[type="password"], 
+input[type="datetime"], 
+input[type="datetime-local"], 
+input[type="date"], 
+input[type="month"], 
+input[type="time"], 
+input[type="week"], 
+input[type="number"], 
+input[type="email"], 
+input[type="url"], 
+input[type="search"], 
+input[type="tel"], 
+input[type="color"], 
+.uneditable-input {
+    height: 30px;
+}
+
 .pure-button {
 	text-transform:  uppercase;
 	font-family:  'Open Sans';
