Email settings + testing now works. Still need a way to securely store the SMTP password, and need to fix the number field

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -148,6 +148,10 @@ main .dashboard .header {
 	padding: 5px;
 }
 
+main .settings-container .header.secondary {
+	padding-left: 60px;
+}
+
 main .dashboard .header .content .welcome {
 	display:inline-block;
 }
