--- a/protected/modules/dashboard/assets/css/pure.css
+++ b/protected/modules/dashboard/assets/css/pure.css
@@ -33,9 +33,10 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     *font-size: 90%;
     *overflow: visible;
     padding: .5em 1.5em;
-    color: #444;
-    color: rgba(0, 0, 0, .8);
-    *color: #444;
+    color: #fff;
+    color: #fff;
+    *color: #fff;
+    text-decoration: none;
     border: 1px solid #999;
     border: 0 rgba(0, 0, 0, 0);
     background-color: #E6E6E6;
@@ -49,6 +50,12 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     transition: .1s linear box-shadow;
 }
 
+.pure-button-link {
+    margin-left: 20px;
+    top: -4px;
+    position: relative;
+}
+
 .pure-button-hover, .pure-button:hover, .pure-button:focus {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000',  endColorstr='#1a000000',  GradientType=0);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0, 0, 0, .05)), to(rgba(0, 0, 0, .1)));
@@ -57,6 +64,8 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     background-image: -ms-linear-gradient(transparent, rgba(0, 0, 0, .05) 40%, rgba(0, 0, 0, .1));
     background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, .05) 40%, rgba(0, 0, 0, .1));
     background-image: linear-gradient(transparent, rgba(0, 0, 0, .05) 40%, rgba(0, 0, 0, .1));
+    color : #fff;
+    text-decoration: none;
 }
 
 .pure-button:focus {
@@ -91,6 +100,22 @@ https://github.com/yui/pure/blob/master/LICENSE.md
 .pure-button-primary, .pure-button-selected, a.pure-button-primary, a.pure-button-selected {
     background-color: #0078e7;
     color: #fff;
+}
+
+.pure-button-success {
+    background: rgb(28, 184, 65); /* this is a green */
+}
+
+.pure-button-error {
+    background: rgb(202, 60, 60); /* this is a maroon */
+}
+
+.pure-button-warning {
+    background: rgb(223, 117, 20); /* this is an orange */
+}
+
+.pure-button-secondary {
+    background: rgb(66, 184, 221); /* this is a light blue */
 }
 
 .pure-button-xsmall {
